advertisement part added

--- a/index.html
+++ b/index.html
@@ -234,9 +234,34 @@
         </div></a>
       </div>
     </div>
+    <br><br>
+    <!-- add one line add -->
+    <div class="firstaddpart">
+      <div class="row">
+        <div class="col-12"><img src="./images/addfirst.avif" alt="" style="width: 100%;"></div>
+      </div>
+    </div>
+    <!-- carousel add -->
+    <br><br><br>
+    <div class="secondaddpart">
+      <div class="owl-carousel owl-theme text-center item1">
+        <div class="item "><a href=""><img src="./images/carouseladd1.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd2.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd3.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd4.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd5.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd6.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd7.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd8.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd9.avif" alt="" class="borderstyle"></a></div>
+        <div class="item "><a href=""><img src="./images/carouseladd10.avif" alt="" class="borderstyle"></a></div>
+      </div>
 
+    </div>
+  
 
   </div>
+  <!-- div container close -->
 
   
 
@@ -266,7 +291,7 @@
     navText: ["<div class='nav-button owl-prev'>‹</div>", "<div class='nav-button owl-next'>›</div>"],
     responsive:{
         0:{
-            items:4
+            items:3
         },
         600:{
             items:5
