fixed footer problem

--- a/index.html
+++ b/index.html
@@ -299,21 +299,21 @@
   </div>
   <!-- div container close -->
   <!-- mobile footer -->
-  <div class="footer d-block d-md-none bg-white border">
+  <div class="navbar d-block d-md-none bg-white border fixed-bottom container-fluid">
     <div class="row" style="height: 50px;">
-      <div class="col-4">
+      <div class="col-4 pl-5">
         <a href="" class="text-dark">
         <img src="./images/bookmyshowlogo.png" alt="" class="footerlogo">
         <p class="text-dark">Home</p>
         </a>  
       </div>
-      <div class="col-4">
+      <div class="col-4 pl-5">
         <a href="" class="text-dark">
         <img src="./images/marketing-buzz.png" alt="" class="footerlogo">
         <p class="text-dark">Buzz</p>
         </a>  
       </div>
-      <div class="col-4">
+      <div class="col-4 pl-5">
         <a href="" class="text-dark">
         <img src="./images/user.png" alt="" class="footerlogo">
         <p class="text-dark">Profile</p>
