fixed footer problem div change to nav tag

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   </div>
   <!-- div container close -->
   <!-- mobile footer -->
-  <div class="navbar d-block d-md-none bg-white border fixed-bottom container-fluid">
+  <nav class="navbar d-block d-md-none bg-white border fixed-bottom container-fluid">
     <div class="row" style="height: 50px;">
       <div class="col-4 pl-5">
         <a href="" class="text-dark">
@@ -322,7 +322,7 @@
      
     </div>
     
-  </div>
+  </nav>
   
 
   
