make recomented part responsive

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
   <!-- for mobile carousel -->
   <div class="formobilecarusel d-block d-md-none">
     <div class="owl-carousel owl-theme text-center item1">
-      <div class="item"><p><span class="material-symbols-outlined">movie</span></p><p>Movie</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">smart_display</span></p><p>Stream</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">sports_soccer</span></p> <p>Sports</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">theater_comedy</span></p><p>Comedy Show</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">event</span></p><p>Online event</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">event</span></p><p>Work Shop</p></div>
-      <div class="item"><p><span class="material-symbols-outlined">density_small</span></p><p>See all</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">movie</span></p><p>Movie</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">smart_display</span></p><p>Stream</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">sports_soccer</span></p> <p>Sports</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">theater_comedy</span></p><p>Comedy Show</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">event</span></p><p>Online event</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">event</span></p><p>Work Shop</p></div>
+      <div class="item mt-2"><p class="mb-0"><span class="material-symbols-outlined">density_small</span></p><p>See all</p></div>
     </div>
   </div>
   <!-- second navbar -->
@@ -169,7 +169,7 @@
       <div class="owl-carousel owl-theme text-center item1">
         <div class="item " >
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white">
             <img src="./images/malayankunju.avif"  class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">malayankunju</p>
@@ -179,7 +179,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white">
             <img src="./images/kaduva.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">kaduva</p>
@@ -189,7 +189,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white">
             <img src="./images/mahaveeryar.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Maha Veeriyar</p>
@@ -199,7 +199,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white">
             <img src="./images/ilavizhapunjira.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Ila Veezha poonjira</p>
