make recomented part responsive

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/kuri.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Kuri</p>
@@ -219,7 +219,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/shamshera.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">shamshera</p>
@@ -230,7 +230,7 @@
 
             <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/ThorLoveandThunder.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Thor : Love and thunder</p>
@@ -240,7 +240,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/Rocketry.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Rocketry</p>
@@ -250,7 +250,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/Iravin Nizhal.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Iravin Nizhal</p>
@@ -260,7 +260,7 @@
         </div></a>
         <div class="item">
           <a href="" class="text-decoration-none text-dark">
-          <div class="card border-white" style="width: 13rem;" >
+          <div class="card border-white" >
             <img src="./images/Padma.avif" class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
               <p class="card-text text-left mb-0 ml-0">Padma</p>
