--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="recomentedcarusel">
       <div class="owl-carousel owl-theme text-center item1">
         <div class="item " >
-          <a href="" class="text-decoration-none text-dark">
+          <a href="./pages/bookticket.html" class="text-decoration-none text-dark">
           <div class="card border-white">
             <img src="./images/malayankunju.avif"  class="card-img-top rounded-bottom" alt="..." >
             <div class="card-body">
@@ -270,7 +270,6 @@
         </div></a>
       </div>
     </div>
-    <br><br>
     <!-- add one line add -->
     <div class="firstaddpart">
       <div class="row">
@@ -278,8 +277,7 @@
       </div>
     </div>
     <!-- carousel add -->
-    <br><br><br>
-    <div class="secondaddpart">
+    <div class="secondaddpart mt-4">
       <div class="owl-carousel owl-theme text-center item1">
         <div class="item "><a href=""><img src="./images/carouseladd1.avif" alt="" class="borderstyle"></a></div>
         <div class="item "><a href=""><img src="./images/carouseladd2.avif" alt="" class="borderstyle"></a></div>
